# sb

./: .coverage  .gitignore  .golangci.yml  .goreleaser.yaml  CLAUDE.md  README.md  go.mod  go.sum  justfile  log.txt  pyproject.toml  ralph.sh
.github/workflows/: ci.yml  release.yml
assets/: doc.go  embed.go  embed_test.go
assets/docker/: Dockerfile  entrypoint.sh
cmd/sb/: completion.go  main.go  main_test.go
homebrew-tap/: README.md
internal/config/: config.go  config_test.go  doc.go
internal/matching/: doc.go  matching.go  matching_test.go
internal/naming/: doc.go  naming.go  naming_test.go
internal/pathutil/: pathutil.go  pathutil_test.go
internal/sandbox/: client.go  client_test.go  doc.go  dockercontext.go  dockercontext_test.go  image.go  image_test.go  manager.go  manager_test.go  mounts.go  mounts_test.go  shell.go  shell_test.go  types.go  types_test.go
internal/ui/: doc.go
sb/: __init__.py  cli.py  config.py  matching.py  naming.py  sandbox.py
sb/docker/: Dockerfile  entrypoint.sh
sb/docker/configs/: starship.toml  zshrc
sb/docker/configs/nvim/: init.lua
sb/docker/configs/nvim/lua/plugins/: init.lua
tests/: conftest.py  test_config.py  test_matching.py  test_naming.py
