[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sb"
version = "0.1.0"
description = "Docker sandbox tool for coding agents"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "docker>=7.0",
    "tomli>=2.0; python_version<'3.11'",
    "rich>=13.0",
]

[project.scripts]
sb = "sb.cli:cli"
